--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Ana Bela Oficial </title> 
+        <title> Ana Bela Real e Oficial </title> 
         <meta charset="utf-8">
   
         <link rel="stylesheet" type="text/css" href="estilo.css">
